<resources>
    <string name="app_name">ChattingApp</string>
    <string name="loginApp">DK Talk</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="signup2">개인 회원가입</string>
    <string name="phone">휴대폰</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="username">이름</string>
    <string name="email">이메일</string>
    <string name="phonenumber">휴대폰 번호 -제외하고 입력</string>
    <string name="signuperror">회원가입 정보를 모두 입력해주세요</string>
    <string name="signupsuccess">회원가입에 성공하였습니다</string>
    <string name="signupfail">회원가입에 실패하였습니다</string>
    <string name="loginsuccess">로그인 성공</string>
    <string name="loginfail">로그인 실패</string>
    <string name="editprofile">프로필 편집</string>
    <string name="complete">완료</string>
    <string name="statusmeesage">상태메시지+</string>
    <string name="statusmeesagechange">상태메시지 올리기</string>
    <string name="statusmeesagechangehint">내용 입력</string>
    <string name="confirm">확인</string>

</resources>