<!-- res/layout/bottom_sheet_layout.xml -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/statuschageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statusmeesagechange"
        app:layout_constraintTop_toBottomOf="@+id/drag_handle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/statusMessageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/statuschageTextView"
        android:hint="@string/statusmeesagechangehint"
        android:inputType="text"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"/>

    <Button
        android:id="@+id/completeChangeStatusButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@+id/statusMessageEditText"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:backgroundTint="@color/grey"
        android:textColor="@color/grey2"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
